--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 Django==3.2.9
 djangorestframework==3.12.4
 et-xmlfile==1.1.0
+gunicorn==20.1.0
 numpy==1.21.4
 openpyxl==3.0.9
 pandas==1.3.4
